<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".post.add_post">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:elevation="2dp"
        app:title="New Post"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        tools:context=".Add_post" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp">

        <ImageView
            android:id="@+id/image_select"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:src="@drawable/placeholder" />

        <View
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/cardview_shadow_end_color" />
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/sharetoPost"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:src="@drawable/ic_share"
            android:backgroundTint="@color/background_color" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:text="@string/share_to_post"
            android:textColor="@color/colorPrimary"
            android:textSize="26sp"
            android:textStyle="bold" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/LoremIpsum"
        android:textColor="@color/colorAccent"
        android:textSize="16sp" />

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Enter Caption">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/caption"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxHeight="100dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/schedulePost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Schedule Post"
        android:textSize="18sp"
        android:textColor="@color/colorPrimary"
        android:layout_marginTop="16dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="8dp">

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:hint="Select Date">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/schedule_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="false"

                android:inputType=""

                android:onClick="showDatePicker" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:hint="Select Time">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/schedule_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="false"

                android:inputType="none"

                android:onClick="showTimePicker" />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/cancel"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:layout_margin="16dp"
            android:textColor="@color/black"
            android:elevation="2dp"
            android:backgroundTint="@color/cardview_shadow_end_color" />

        <Button
            android:id="@+id/post"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/post" />
    </LinearLayout>
</LinearLayout>
